# boken-old

./: .gitmodules  CMakeLists.txt  README.md  boken.sln  boken.vcxproj  boken.vcxproj.filters  build.props  libs.props  local-settings.props
docs/: item_properties.md  objects.md
src/: .clang-format  algorithm.hpp  allocator.hpp  bsp_generator.cpp  bsp_generator.hpp  catch.cpp  catch.hpp  circular_buffer.hpp  command.cpp  command.hpp  config.hpp  context.hpp  context_fwd.hpp  data.cpp  data.hpp  definition.hpp  entity.cpp  entity.hpp  entity_def.hpp  entity_properties.hpp  events.hpp  flag_set.hpp  format.hpp  forward_declarations.hpp  functional.hpp  graph.hpp  hash.hpp  id_fwd.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  item_def.hpp  item_list.cpp  item_list.hpp  item_pile.hpp  item_properties.hpp  level.cpp  level.hpp  level_details.hpp  (+40 more)
src/test/: algorithm.t.cpp  bsp_generator.t.cpp  circular_buffer.t.cpp  entity.t.cpp  flag_set.t.cpp  graph.t.cpp  hash.t.cpp  level.t.cpp  math.t.cpp  math_types.t.cpp  random.t.cpp  rect.t.cpp  spatial_map.t.cpp  types.t.cpp  unicode.t.cpp  utility.t.cpp
